--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.33"
+    "@types/react-redux": "^7.1.33",
+    "node-sass": "^7.0.3"
   }
 }
